samples/_failures_safe/1761202571_febc93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb5a0497.c: In function ‘main’:
./samples/SAFE/__tmp_bb5a0497.c:130:13: error: expected declaration or statement at end of input
  130 |             input_matrix(rows, cols, matrix2);
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_bb5a0497.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb5a0497.c:130:13: error: expected declaration or statement at end of input
